# raildock_RAG_LLM

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  appspec.yml  buildspec.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.py  start.bat
app/: config.py  main.py
app/models/: schemas.py
app/routers/: document.py  pipeline.py
app/services/: generator.py  pdf_generator.py  reviewer.py  vector_service.py  zip_processor.py
app/utils/: chunker.py  pdf_loader.py
chatbot/: __init__.py  config.py
chatbot/routers/: __init__.py  chat.py
chatbot/services/: __init__.py  chatbot_service.py  report_vector_service.py
deploy/: health.sh  prep.sh  start.sh  stop.sh
scripts/: embed_documents.py  embed_regulations.py  init_db.py  test_api.py
